# ML-examples

./: .gitignore  README.md
.github/workflows/: cmsis-pack-examples-push.yml  cmsis-pack-examples-zip.yml  main.yml
armnn-mnist/: Makefile  README.md  mnist_caffe.cpp  mnist_loader.hpp  mnist_tf.cpp
armnn-mnist/data/: README.md
armnn-mnist/model/: simple_mnist_tf.pb
armnn-mobilenet-android/: README.md  build.gradle  settings.gradle
armnn-mobilenet-android/app/: build.gradle
armnn-mobilenet-android/gradle/wrapper/: gradle-wrapper.properties
armnn-mobilenet-quant/: Makefile  README.md  inference_test_image.cpp  inference_test_image.hpp  mobilenetv1_quant_tflite.cpp  model_output_labels_loader.hpp  utils.cpp  utils.hpp
armnn-style-transfer-android/: AUTHORS  CONTRIBUTORS  README.md  build.gradle  local.properties
armnn-style-transfer-android/app/: build.gradle
armnn-style-transfer-android/gradle/wrapper/: gradle-wrapper.properties
autoware-vision-detector/: CMakeLists.txt  README.md  package.xml
autoware-vision-detector/include/: armnn_yolo2tiny.hpp  detector.hpp  detector_armnn.hpp  profile.hpp  vision_detector.hpp
autoware-vision-detector/launch/: vision_yolo2tiny_detect.launch
autoware-vision-detector/models/: armnn_yolo2tiny.yaml
autoware-vision-detector/scripts/: autoware_setup.sh  get_yolo_tiny_v2.sh  images_to_rosbag.py  make_space.sh  ros_setup.sh  run_demo.sh
autoware-vision-detector/src/: detector.cpp  detector_armnn.cpp  vision_detector.cpp  vision_detector_node.cpp  vision_detector_tool.cpp
autoware-vision-detector/test/: test_armnn_yolo2tiny.cpp  test_preprocess_image.cpp
cmsis-pack-examples/: .cdefault.yml  .clang-format  README.md  cdefault.yml  mlek.csolution.yml  vcpkg-configuration.json
cmsis-pack-examples/.ci/: README.md  vcpkg-configuration.json
cmsis-pack-examples/.github/workflows/: AVH-FVP-CI.yml  Hardware-CI.yml
cmsis-pack-examples/FVP/FVP_Corstone_SSE-300/: fvp_config.txt
cmsis-pack-examples/FVP/FVP_Corstone_SSE-300_Ethos-U55/: fvp_config.txt
cmsis-pack-examples/FVP/FVP_Corstone_SSE-300_Ethos-U65/: fvp_config.txt
cmsis-pack-examples/FVP/FVP_Corstone_SSE-310/: fvp_config.txt
cmsis-pack-examples/FVP/FVP_Corstone_SSE-310_Ethos-U65/: fvp_config.txt
cmsis-pack-examples/common/: common.clayer.yml
cmsis-pack-examples/common/include/: BufAttributes.hpp  ethosu_mem_config.h  uart_config.h  uart_stdout.h
cmsis-pack-examples/common/src/: arm_nn_softmax_common_s8.c  retarget.c  uart_cmsdk_apb.c
cmsis-pack-examples/device/alif-ensemble/: alif-ensemble-E7-device.clayer.yml
cmsis-pack-examples/device/corstone/: corstone-device.clayer.yml
cmsis-pack-examples/device/frdm-k64f/: frdm-k64f-device.clayer.yml
cmsis-pack-examples/device/stm32f746-discovery/: stm32f746-discovery-device.clayer.yml
cmsis-pack-examples/kws/: kws.cproject.yml  mps3-sse-300.sct
cmsis-pack-examples/kws/include/: InputFiles.hpp  Labels.hpp
cmsis-pack-examples/kws/linker/: alif-e7-m55-he.sct  frdm-k64f.sct  mps3-sse-310.sct  stm32f746-disco.sct
cmsis-pack-examples/kws/src/: InputFiles.cpp  Labels.cpp  kws_micronet_m.tflite.cpp  kws_micronet_m_vela_H128.tflite.cpp  kws_micronet_m_vela_H256.tflite.cpp  kws_micronet_m_vela_Y256.tflite.cpp  kws_micronet_m_vela_Z256.tflite.cpp  main.cpp  main_live.cpp  main_wav.cpp  sample_audio.cpp
cmsis-pack-examples/object-detection/: object-detection-vsi.cproject.yml  object-detection.Debug+AVH-U55.cprj  object-detection.clayer.yml  object-detection.cproject.yml
cmsis-pack-examples/object-detection/include/: InputFiles.hpp
cmsis-pack-examples/object-detection/linker/: alif-e7-m55-hp.sct  mps3-sse-300.sct  mps3-sse-310.sct  mps4-sse-315.sct
cmsis-pack-examples/object-detection/src/: InputFiles.cpp  (+9 more)
cmsis-pack-examples/resources/: files.md
cmsisnn-cifar10/: README.md  code_gen.py  nn_quantizer.py
cmsisnn-cifar10/models/: cifar10_m4.pkl  cifar10_m4_train_test.prototxt  cifar10_m7.pkl  cifar10_m7_train_test.prototxt  quantized_cifar10_m4_iter_70000.caffemodel  quantized_cifar10_m7_iter_300000.caffemodel
ethos-u-corstone-300/: README.md  train_and_deploy.ipynb
ethos-u-microspeech/: MicroSpeech-EthosU55.ipynb  README.md
kleidiai-examples/audiogen/: .gitignore  README.md  install_requirements.sh
kleidiai-examples/audiogen/app/: CMakeLists.txt  README.md  audiogen.cpp
kleidiai-examples/llama_cpp/: 0001-Use-KleidiAI-Int4-Matmul-micro-kernels-in-llama.cpp.patch  LICENSE  README.md
multi-gesture-recognition/: README.md  camera.py  classify.py  merge.py  preview.py  record.py  run.py  story.py  test.py  train.py  validate_split.py
multi-gesture-recognition/audio/: README.md
pruning-clustering-ethos-u/: README.md  pruning_clustering_for_Arm_Ethos_U55_U65.ipynb
pyarmnn-fire-detection/: README.MD  predict_pyarmnn.py  predict_tflite.py
pytorch-to-tflite/: PyTorch_to_TensorFlow_Lite.ipynb  README.md
rnn-unrolling-tflite/: README.md  RNN_models_for_Arm_Ethos_U55_U65.ipynb
tflm-cmsisnn-mbed-image-recognition/: CMakeLists.txt  README.md  clean.sh  generate_cmake_files.sh  mbed-os.lib  mbed_app.json  requirements.txt  setup.sh  test_performance.sh
tflm-cmsisnn-mbed-image-recognition/image_recognition/: CMakeLists.txt  image_dims.h  image_provider.h  image_recognition_model.h  main.cpp  test.cpp  util.h
tflm-cmsisnn-mbed-image-recognition/image_recognition/image_recognition_model/: image_recognition_model.cc
tflm-cmsisnn-mbed-image-recognition/image_recognition/stm32f746_discovery/: display_util.cc  display_util.h  image_provider.cc  image_util.cc  image_util.h
tflm-cmsisnn-mbed-image-recognition/patches/: 0001-Drivers-patch.patch  0001-profiler.patch
tflu-kws-cortex-m/: README.md
tflu-kws-cortex-m/Training/: README.md  convert.py  data.py  label_wav.py  models.py  optimize.py  quantize.py  requirements.txt  test.py  test_tflite.py  train.py  train_commands.txt
tflu-kws-cortex-m/kws_cortex_m/: Makefile.inc  README.md  tflite_to_tflu.py
yeah-world/: README.md  camera.py  mnet.pb  pinet.py  preview.py  randomsound.py  record.py  run.py  train.py
yeah-world/sounds/: README.md
(+165 files in other folders)
