<?xml version="1.0"?>
<package>
    <name>vision_detector</name>
    <version>1.13.0</version>
    <description>Generic Image Detector</description>
    <maintainer email="liyou.zhou@arm.com">Liyou Zhou</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>autoware_msgs</build_depend>
    <build_depend>autoware_config_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>autoware_msgs</run_depend>
    <run_depend>autoware_config_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>detected_objects_visualizer</run_depend>
    <export>
    </export>
</package>
